# kamadanv2

./: Dockerfile  build_client.sh  config.sh  gw_version_checker.sh  redeploy.sh  run_ascalon_client.sh  run_kamadan_client.sh  run_server.sh
client/: .gitignore  .gitmodules  Dockerfile  README.md  ServerConfig.class.js  Vagrantfile  deploy.sh  run_chat.sh  run_client.sh  symlinks.bat
client/Dependencies/Headquarter/: .gitignore  CMakeLists.txt
client/Dependencies/Headquarter/code/: CMakeLists.txt
client/Dependencies/Headquarter/code/client/: CMakeLists.txt  agent.c  agent.h  api.c  auth.c  auth.h  bag.h  character.h  chat.c  chat.h  client.c  command.c  dialog.c  dialog.h  effect.c  effect.h  error.c  event.c  friend.c  friend.h  game.c  game.h  guild.c  guild.h  hero.c  instance.c  inventory.h  item.c  item.h  main.c  merchant.c  merchant.h  network.c  opcodes.h  packets.info  party.c  (+13 more)
client/Dependencies/Headquarter/data/: gw_36618.pub.txt  gw_36630.pub.txt  gw_36633.pub.txt  gw_36642.pub.txt  gw_36645.pub.txt  gw_36649.pub.txt  gw_36652.pub.txt  gw_36659.pub.txt  gw_36670.pub.txt  gw_36678.pub.txt  gw_36688.pub.txt  gw_36692.pub.txt  gw_36706.pub.txt  gw_36711.pub.txt  gw_36716.pub.txt  gw_36731.pub.txt  gw_36733.pub.txt  gw_36737.pub.txt  gw_36740.pub.txt  gw_36746.pub.txt  gw_36755.pub.txt  gw_36761.pub.txt  gw_36771.pub.txt  gw_36782.pub.txt  gw_36785.pub.txt  gw_36787.pub.txt  gw_36789.pub.txt  gw_36793.pub.txt  gw_36796.pub.txt  gw_36797.pub.txt  gw_36798.pub.txt  gw_36822.pub.txt  gw_36826.pub.txt  gw_36859.pub.txt  gw_36876.pub.txt  gw_36879.pub.txt  gw_36882.pub.txt  gw_36955.pub.txt  gw_36963.pub.txt  gw_36967.pub.txt  (+56 more)
client/Dependencies/Headquarter/include/: str.h  vars.c
client/Dependencies/Headquarter/plugins/: async.h  gw-helper.c
client/Dependencies/Headquarter/tests/: CMakeLists.txt  test_kstr_hdr.c
client/Dependencies/Headquarter/tools/: convert_key_to_text.py  dump_area_info.py  dump_key.py  inflate.py  main.py  packet.py  print_gw_exe_file_id.py  scanner.py  update_binary.py  update_opcode.py  utils.py
client/VagrantConfig/: Functions.rb
client/hq_client/: CMakeLists.txt  async.h  build.bat  build.sh  gw-helper.c  main.c
client/hq_client/data/: gw_37400.pub  gw_37444.pub  gw_37444.pub.txt  gw_37449.pub.txt  gw_37455.pub.txt
client/hq_client/logs/: 2022-04-15.txt
server/: server.js
(+39 files in other folders)
